infra/vault-server/templates/ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-ui-ingress
  namespace: vault
  annotations:
    cert-manager.io/cluster-issuer: "vault-issuer"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - vault.infra.local
    secretName: vault-ui-tls
  rules:
  - host: vault.infra.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vault
            port:
              number: 8200
